<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.example.apis.misc.ui.Dashboard
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_margin="16dp"
        android:padding="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:minItemsSize="64dp"
        app:maxItemsSize="112dp"
        android:background="#c3c3c3">

        <com.example.apis.misc.ui.DashboardItem
            android:id="@+id/frg_home_di_opt1"
            android:background="#ffffff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintRight_toLeftOf="@id/frg_home_di_opt2"
            app:layout_constraintEnd_toStartOf="@id/frg_home_di_opt2"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:title="@string/frg_home_opt1"
            app:image="@drawable/ic_envelope" />

        <com.example.apis.misc.ui.DashboardItem
            android:id="@+id/frg_home_di_opt2"
            android:background="#ffffff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toRightOf="@id/frg_home_di_opt1"
            app:layout_constraintStart_toEndOf="@id/frg_home_di_opt1"
            app:layout_constraintRight_toLeftOf="@id/frg_home_di_opt3"
            app:layout_constraintEnd_toStartOf="@id/frg_home_di_opt3"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:title="@string/frg_home_opt2"
            app:image="@drawable/ic_envelope" />

        <com.example.apis.misc.ui.DashboardItem
            android:id="@+id/frg_home_di_opt3"
            android:background="#ffffff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toRightOf="@id/frg_home_di_opt2"
            app:layout_constraintStart_toEndOf="@id/frg_home_di_opt2"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:title="@string/frg_home_opt3"
            app:image="@drawable/ic_envelope" />

        <com.example.apis.misc.ui.DashboardItem
            android:id="@+id/frg_home_di_opt4"
            android:background="#ffffff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:layout_constraintTop_toBottomOf="@id/frg_home_di_opt1"
            app:layout_constraintLeft_toLeftOf="@id/frg_home_di_opt1"
            app:layout_constraintStart_toStartOf="@id/frg_home_di_opt1"
            app:layout_constraintRight_toRightOf="@id/frg_home_di_opt1"
            app:layout_constraintEnd_toEndOf="@id/frg_home_di_opt1"
            app:title="@string/frg_home_opt4"
            app:image="@drawable/ic_envelope" />

        <com.example.apis.misc.ui.DashboardItem
            android:id="@+id/frg_home_di_opt5"
            android:background="#ffffff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:layout_constraintTop_toBottomOf="@id/frg_home_di_opt2"
            app:layout_constraintLeft_toLeftOf="@id/frg_home_di_opt2"
            app:layout_constraintStart_toStartOf="@id/frg_home_di_opt2"
            app:layout_constraintRight_toRightOf="@id/frg_home_di_opt2"
            app:layout_constraintEnd_toEndOf="@id/frg_home_di_opt2"
            app:title="@string/frg_home_opt5"
            app:image="@drawable/ic_envelope" />

        <com.example.apis.misc.ui.DashboardItem
            android:id="@+id/frg_home_di_opt6"
            android:background="#ffffff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:layout_constraintTop_toBottomOf="@id/frg_home_di_opt3"
            app:layout_constraintLeft_toLeftOf="@id/frg_home_di_opt3"
            app:layout_constraintStart_toStartOf="@id/frg_home_di_opt3"
            app:layout_constraintRight_toRightOf="@id/frg_home_di_opt3"
            app:layout_constraintEnd_toEndOf="@id/frg_home_di_opt3"
            app:title="@string/frg_home_opt6"
            app:image="@drawable/ic_envelope" />

        <com.example.apis.misc.ui.DashboardItem
            android:id="@+id/frg_home_di_opt7"
            android:background="#ffffff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:layout_constraintTop_toBottomOf="@id/frg_home_di_opt4"
            app:layout_constraintLeft_toLeftOf="@id/frg_home_di_opt4"
            app:layout_constraintStart_toStartOf="@id/frg_home_di_opt4"
            app:layout_constraintRight_toRightOf="@id/frg_home_di_opt4"
            app:layout_constraintEnd_toEndOf="@id/frg_home_di_opt4"
            app:title="@string/frg_home_opt7"
            app:image="@drawable/ic_envelope" />

        <com.example.apis.misc.ui.DashboardItem
            android:id="@+id/frg_home_di_opt8"
            android:background="#ffffff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:layout_constraintTop_toBottomOf="@id/frg_home_di_opt5"
            app:layout_constraintLeft_toLeftOf="@id/frg_home_di_opt5"
            app:layout_constraintStart_toStartOf="@id/frg_home_di_opt5"
            app:layout_constraintRight_toRightOf="@id/frg_home_di_opt5"
            app:layout_constraintEnd_toEndOf="@id/frg_home_di_opt5"
            app:title="@string/frg_home_opt8"
            app:image="@drawable/ic_envelope" />
    </com.example.apis.misc.ui.Dashboard>
</androidx.constraintlayout.widget.ConstraintLayout>